# vertica-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  setup.py  setup_clients.py
docs/superpowers/specs/: 2026-04-24-vertica-security-compliance-design.md
tests/: conftest.py  test_cli.py  test_connection.py  test_connection_extra.py  test_dependencies.py  test_server_auth.py  test_server_branches.py  test_server_deep.py  test_server_inner_sync.py  test_server_metadata.py  test_server_performance.py  test_server_prompts.py  test_server_tools.py  test_server_utils.py  test_utils.py
vertica_mcp/: __init__.py  __main__.py  cli.py  connection.py  server.py  utils.py
